--- a/My Chat/app/src/main/res/layout/activity_login_otp.xml
+++ b/My Chat/app/src/main/res/layout/activity_login_otp.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:layout_margin="20dp"
     android:weightSum="100"
-    tools:context=".LoginPhoneNumberActivity">
+    tools:context=".LoginOtpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary"
+            android:backgroundTint="@color/light_gary"
             android:layout_margin="10dp">
 
             <TextView
@@ -38,7 +38,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/light_gary"
+            android:backgroundTint="@color/my_primary"
             android:layout_margin="10dp">
 
             <TextView
@@ -70,22 +70,22 @@
     </LinearLayout>
 
     <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/phone_icon"
-            app:tint="@color/my_primary" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/password_icon"
+        app:tint="@color/my_primary" />
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enter mobile number"
-            android:layout_gravity="center_vertical"
-            android:letterSpacing="0.08"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:textColor="@color/light_gary"
-            android:layout_weight="5"/>
-    
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enter Otp sent to your phone number"
+        android:layout_gravity="center_vertical"
+        android:letterSpacing="0.08"
+        android:textStyle="bold"
+        android:textSize="19sp"
+        android:textColor="@color/light_gary"
+        android:layout_weight="5"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -93,25 +93,18 @@
         android:gravity="center"
         android:layout_weight="5">
 
-        <com.hbb20.CountryCodePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:ccp_showNameCode="false"
-            app:ccp_showFlag="false"
-            app:ccp_defaultNameCode="VN"
-            android:id="@+id/login_countryCode"/>
-
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:hint="Mobile"
+            android:hint="OTP"
+            android:maxLength="6"
             android:inputType="phone"
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"
-            android:id="@+id/login_mobile_number"/>
+            android:id="@+id/login_otp"/>
 
     </LinearLayout>
 
@@ -125,8 +118,8 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="SEND OTP"
-            android:id="@+id/send_otp_btn"/>
+            android:text="NEXT"
+            android:id="@+id/login_next_btn"/>
 
         <ProgressBar
             android:layout_width="32dp"
@@ -134,5 +127,14 @@
             android:layout_gravity="center"
             android:id="@+id/login_progress_bar"/>
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Resend OTP in 30 sec"
+        android:layout_weight="10"
+        android:textColor="@color/light_gary"
+        android:id="@+id/resend_otp_textview"/>
 
 </LinearLayout>
