--- a/My Chat/app/src/main/res/drawable/edit_text_rounded_corner.xml
+++ b/My Chat/app/src/main/res/drawable/edit_text_rounded_corner.xml
@@ -3,9 +3,9 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/white"/>
+        android:color="@color/off_white"/>
     <corners
         android:radius="10dp"/>
 
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/off_white"/>
 </shape>
