--- a/My Chat/app/src/main/res/layout/activity_chat.xml
+++ b/My Chat/app/src/main/res/layout/activity_chat.xml
@@ -60,19 +60,62 @@
         android:layout_height="80dp"
         android:layout_alignParentBottom="true"
         android:padding="8dp">
-        
-        <EditText
-            android:id="@+id/chat_message_input"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Write message here"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            android:background="@drawable/edit_text_rounded_corner"
-            android:padding="10dp"
-            android:elevation="4dp"
-            android:layout_toLeftOf="@id/message_send_btn"/>
-        
+            android:orientation="horizontal"
+            android:gravity="center"
+            >
+            <ImageButton
+                android:id="@+id/show_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/icon_addbox"
+                android:layout_centerInParent="true"
+                app:tint="@color/my_primary"
+                android:backgroundTint="@color/white"
+                />
+            <LinearLayout
+                android:id="@+id/hidden_buttons"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_below="@id/show_image"
+                android:layout_centerHorizontal="true"
+                >
+
+                <ImageButton
+                    android:id="@+id/button_camera"
+                    android:layout_width="25dp"
+                    android:backgroundTint="@color/white"
+                    android:layout_height="25dp"
+                    android:src="@drawable/icon_camera"
+                    app:tint="@color/my_primary"/>
+
+                <ImageButton
+                    android:id="@+id/button_file"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:backgroundTint="@color/white"
+                    android:src="@drawable/icon_file"
+                    app:tint="@color/my_primary"/>
+            </LinearLayout>
+            <EditText
+
+                android:id="@+id/chat_message_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Write message here"
+                android:layout_centerInParent="true"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_text_rounded_corner"
+                android:padding="10dp"
+                android:elevation="4dp"
+                />
+
+        </LinearLayout>
+
         <ImageButton
             android:id="@+id/message_send_btn"
             android:layout_width="48dp"
